--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,6 @@
-# System
-.DS_Store
-Thumbs.db
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
 venv/
-.venv/
-env/
-.env
-
-# Node
-node_modules/
-.next/
-out/
-build/
-dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE settings
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Project specific
-backend/temp/
-backend/logs/
-!backend/logs/.gitkeep
-backend/assets/*.png
-!backend/assets/screenshot.png
-backend/screenshots/
-frontend/.env.local
+__pycache__/
+*.pyc
+logs/
+.DS_Store
+*.log
